dishwasher notebook updated

--- a/refit/dishwasher/get_splits_for_dishwasher.ipynb
+++ b/refit/dishwasher/get_splits_for_dishwasher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from nilm_analyzer.loaders import REFIT_Loader\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +184,7 @@
    "source": [
     "for house_number in appliance_data.data.keys():\n",
     "    print(f'Making splits for House: {house_number}')\n",
-    "    appliance_data.data[house_number].rename(columns={'aggregate':'power_sm', target_appliance.lower(): f'power_{target_appliance.lower()}'}, inplace=True)\n",
+    "    appliance_data.data[house_number].rename(columns={'aggregate':'power_sm', target_appliance.lower(): f'power_dishwasher'}, inplace=True)\n",
     "    appliance_data.get_proportioned_data(target_houses={'TRAIN': [house_number], 'VALIDATE': [house_number], 'TEST': [house_number]},\n",
     "                                    splits_proportion={'TRAIN_PERCENT': 0.7, 'VALIDATE_PERCENT': 0.0, 'TEST_PERCENT': 0.3})\n",
     "    appliance_data.save_splits(output_directory=f'D:/data/splits/refit/{target_appliance}/house_{house_number}/')"
