dishwasher notebook updated

--- a/refit/dishwasher/basic.ipynb
+++ b/refit/dishwasher/basic.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "appliance_data.activations[1].sort_values(by='duration_in_seconds', ascending=False)"
+    "appliance_data.activations[1].sort_values(by='duration_in_minutes', ascending=False)"
    ],
    "metadata": {
     "collapsed": false
