dishwasher notebooks updated

--- a/refit/dishwasher/basic.ipynb
+++ b/refit/dishwasher/basic.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -90,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "{1:                      aggregate  dish washer\n time                                       \n 2013-10-09 13:06:16      523.0          0.0\n 2013-10-09 13:06:24      523.0          0.0\n 2013-10-09 13:06:32      526.0          0.0\n 2013-10-09 13:06:40      526.0          0.0\n 2013-10-09 13:06:48      540.0          0.0\n ...                        ...          ...\n 2015-07-10 11:56:00      180.0          0.0\n 2015-07-10 11:56:08      186.0          0.0\n 2015-07-10 11:56:16      181.0          0.0\n 2015-07-10 11:56:24      186.0          0.0\n 2015-07-10 11:56:32      182.0          0.0\n \n [6900678 rows x 2 columns],\n 2:                      aggregate  dish washer\n time                                       \n 2013-09-17 22:08:08      695.0          0.0\n 2013-09-17 22:08:16      694.0          0.0\n 2013-09-17 22:08:24      694.0          0.0\n 2013-09-17 22:08:32      702.0          0.0\n 2013-09-17 22:08:40      700.0          0.0\n ...                        ...          ...\n 2015-05-28 08:05:04      313.0          0.0\n 2015-05-28 08:05:12      321.5          0.0\n 2015-05-28 08:05:20      333.0          0.0\n 2015-05-28 08:05:28      313.0          0.0\n 2015-05-28 08:05:36      316.0          0.0\n \n [6668082 rows x 2 columns],\n 3:                      aggregate  dish washer\n time                                       \n 2013-09-25 19:21:04      387.0          0.0\n 2013-09-25 19:21:12      386.5          0.0\n 2013-09-25 19:21:20      383.0          0.0\n 2013-09-25 19:21:28      388.0          0.0\n 2013-09-25 19:21:36      388.0          0.0\n ...                        ...          ...\n 2015-06-02 10:55:04     2632.0          0.0\n 2015-06-02 10:55:12     2674.0          0.0\n 2015-06-02 10:55:20     2435.0          0.0\n 2015-06-02 10:55:28     2453.0          0.0\n 2015-06-02 10:55:36     2733.0          0.0\n \n [6638210 rows x 2 columns],\n 5:                      aggregate  dish washer\n time                                       \n 2013-09-26 09:56:08      275.0          0.0\n 2013-09-26 09:56:16      273.0          0.0\n 2013-09-26 09:56:24      273.0          0.0\n 2013-09-26 09:56:32      275.5          0.0\n 2013-09-26 09:56:40      276.0          0.0\n ...                        ...          ...\n 2015-07-06 17:48:16      834.5          0.0\n 2015-07-06 17:48:24      515.0          0.0\n 2015-07-06 17:48:32      515.0          0.0\n 2015-07-06 17:48:40      515.0          0.0\n 2015-07-06 17:48:48      500.0          0.0\n \n [7001946 rows x 2 columns]}"
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,26 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Extracting activations for House 1\n",
-      "Consumption Threshold is set to = 63.125\n",
+      "Consumption Threshold is set to = 0.025\n",
       "Time Delay Threshold is set to = 10.0 minutes\n",
       "Estimating active durations of: dish washer\n",
       "Extracting activations for House 2\n",
-      "Consumption Threshold is set to = 62.0\n",
+      "Consumption Threshold is set to = 0.025\n",
       "Time Delay Threshold is set to = 10.0 minutes\n",
       "Estimating active durations of: dish washer\n",
       "Extracting activations for House 3\n",
-      "Consumption Threshold is set to = 96.0\n",
+      "Consumption Threshold is set to = 0.025\n",
       "Time Delay Threshold is set to = 10.0 minutes\n",
       "Estimating active durations of: dish washer\n",
       "Extracting activations for House 5\n",
-      "Consumption Threshold is set to = 66.175\n",
+      "Consumption Threshold is set to = 0.025\n",
       "Time Delay Threshold is set to = 10.0 minutes\n",
       "Estimating active durations of: dish washer\n",
       "Updating activations with durations when appliance is active (above threshold).\n"
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "         activity_start        activity_end  duration_in_seconds\n168 2015-03-06 02:09:52 2015-03-06 04:13:20               6440.0\n48  2014-03-07 01:57:44 2014-03-07 04:00:48               6392.0\n24  2013-12-16 02:29:04 2013-12-16 04:32:48               6352.0\n65  2014-04-05 11:44:56 2014-04-05 13:40:48               5848.0\n110 2014-10-16 03:43:44 2014-10-16 05:38:48               5648.0\n..                  ...                 ...                  ...\n33  2013-12-26 23:18:16 2013-12-26 23:33:52                936.0\n135 2014-12-25 20:24:00 2014-12-25 20:41:20                936.0\n133 2014-12-25 11:17:52 2014-12-25 11:35:20                760.0\n31  2013-12-25 18:29:20 2013-12-25 18:46:40                736.0\n52  2014-03-25 00:10:16 2014-03-25 00:17:12                416.0\n\n[179 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>activity_start</th>\n      <th>activity_end</th>\n      <th>duration_in_seconds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>168</th>\n      <td>2015-03-06 02:09:52</td>\n      <td>2015-03-06 04:13:20</td>\n      <td>6440.0</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>2014-03-07 01:57:44</td>\n      <td>2014-03-07 04:00:48</td>\n      <td>6392.0</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>2013-12-16 02:29:04</td>\n      <td>2013-12-16 04:32:48</td>\n      <td>6352.0</td>\n    </tr>\n    <tr>\n      <th>65</th>\n      <td>2014-04-05 11:44:56</td>\n      <td>2014-04-05 13:40:48</td>\n      <td>5848.0</td>\n    </tr>\n    <tr>\n      <th>110</th>\n      <td>2014-10-16 03:43:44</td>\n      <td>2014-10-16 05:38:48</td>\n      <td>5648.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>2013-12-26 23:18:16</td>\n      <td>2013-12-26 23:33:52</td>\n      <td>936.0</td>\n    </tr>\n    <tr>\n      <th>135</th>\n      <td>2014-12-25 20:24:00</td>\n      <td>2014-12-25 20:41:20</td>\n      <td>936.0</td>\n    </tr>\n    <tr>\n      <th>133</th>\n      <td>2014-12-25 11:17:52</td>\n      <td>2014-12-25 11:35:20</td>\n      <td>760.0</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>2013-12-25 18:29:20</td>\n      <td>2013-12-25 18:46:40</td>\n      <td>736.0</td>\n    </tr>\n    <tr>\n      <th>52</th>\n      <td>2014-03-25 00:10:16</td>\n      <td>2014-03-25 00:17:12</td>\n      <td>416.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>179 rows × 3 columns</p>\n</div>"
+      "text/plain": "         activity_start        activity_end  duration_in_minutes\n67  2014-06-14 12:24:48 2014-06-14 14:40:40           135.866667\n23  2013-12-16 02:28:24 2013-12-16 04:40:56           132.533333\n99  2014-10-16 03:42:40 2014-10-16 05:54:48           132.133333\n43  2014-03-07 01:56:32 2014-03-07 04:05:20           128.800000\n54  2014-04-05 11:43:44 2014-04-05 13:52:24           128.666667\n..                  ...                 ...                  ...\n49  2014-03-30 01:04:00 2014-03-30 01:14:48            10.800000\n47  2014-03-25 05:11:28 2014-03-25 05:22:08            10.666667\n45  2014-03-25 00:10:16 2014-03-25 00:17:12             6.933333\n151 2015-03-04 10:38:40 2015-03-04 10:44:16             5.600000\n50  2014-03-30 10:04:08 2014-03-30 10:08:32             4.400000\n\n[185 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>activity_start</th>\n      <th>activity_end</th>\n      <th>duration_in_minutes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>67</th>\n      <td>2014-06-14 12:24:48</td>\n      <td>2014-06-14 14:40:40</td>\n      <td>135.866667</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>2013-12-16 02:28:24</td>\n      <td>2013-12-16 04:40:56</td>\n      <td>132.533333</td>\n    </tr>\n    <tr>\n      <th>99</th>\n      <td>2014-10-16 03:42:40</td>\n      <td>2014-10-16 05:54:48</td>\n      <td>132.133333</td>\n    </tr>\n    <tr>\n      <th>43</th>\n      <td>2014-03-07 01:56:32</td>\n      <td>2014-03-07 04:05:20</td>\n      <td>128.800000</td>\n    </tr>\n    <tr>\n      <th>54</th>\n      <td>2014-04-05 11:43:44</td>\n      <td>2014-04-05 13:52:24</td>\n      <td>128.666667</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>49</th>\n      <td>2014-03-30 01:04:00</td>\n      <td>2014-03-30 01:14:48</td>\n      <td>10.800000</td>\n    </tr>\n    <tr>\n      <th>47</th>\n      <td>2014-03-25 05:11:28</td>\n      <td>2014-03-25 05:22:08</td>\n      <td>10.666667</td>\n    </tr>\n    <tr>\n      <th>45</th>\n      <td>2014-03-25 00:10:16</td>\n      <td>2014-03-25 00:17:12</td>\n      <td>6.933333</td>\n    </tr>\n    <tr>\n      <th>151</th>\n      <td>2015-03-04 10:38:40</td>\n      <td>2015-03-04 10:44:16</td>\n      <td>5.600000</td>\n    </tr>\n    <tr>\n      <th>50</th>\n      <td>2014-03-30 10:04:08</td>\n      <td>2014-03-30 10:08:32</td>\n      <td>4.400000</td>\n    </tr>\n  </tbody>\n</table>\n<p>185 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:xlabel='time'>"
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,9 +194,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subetting dataset with 20 days of data for House 1\n",
+      "Subetting dataset with 20 days of data for House 2\n",
+      "Subetting dataset with 20 days of data for House 3\n",
+      "Subetting dataset with 20 days of data for House 5\n",
+      "Updating data with selected active appliance activities...\n"
+     ]
+    }
+   ],
+   "source": [
+    "appliance_data.subset_data(no_of_days=20)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{1:                      aggregate  dish washer\n time                                       \n 2013-10-09 13:06:16      523.0          0.0\n 2013-10-09 13:06:24      523.0          0.0\n 2013-10-09 13:06:32      526.0          0.0\n 2013-10-09 13:06:40      526.0          0.0\n 2013-10-09 13:06:48      540.0          0.0\n ...                        ...          ...\n 2013-10-29 13:05:44     1762.0          0.0\n 2013-10-29 13:05:52     1762.0          0.0\n 2013-10-29 13:06:00     1762.0          0.0\n 2013-10-29 13:06:08     1762.0          0.0\n 2013-10-29 13:06:16     1762.0          0.0\n \n [216001 rows x 2 columns],\n 2:                      aggregate  dish washer\n time                                       \n 2013-09-17 22:08:08      695.0          0.0\n 2013-09-17 22:08:16      694.0          0.0\n 2013-09-17 22:08:24      694.0          0.0\n 2013-09-17 22:08:32      702.0          0.0\n 2013-09-17 22:08:40      700.0          0.0\n ...                        ...          ...\n 2013-10-07 22:07:36      113.0          0.0\n 2013-10-07 22:07:44      114.0          0.0\n 2013-10-07 22:07:52      114.0          0.0\n 2013-10-07 22:08:00      113.0          0.0\n 2013-10-07 22:08:08      113.0          0.0\n \n [216001 rows x 2 columns],\n 3:                      aggregate  dish washer\n time                                       \n 2013-09-25 19:21:04      387.0          0.0\n 2013-09-25 19:21:12      386.5          0.0\n 2013-09-25 19:21:20      383.0          0.0\n 2013-09-25 19:21:28      388.0          0.0\n 2013-09-25 19:21:36      388.0          0.0\n ...                        ...          ...\n 2013-10-15 19:20:32      413.0          0.0\n 2013-10-15 19:20:40      413.0          0.0\n 2013-10-15 19:20:48      414.0          0.0\n 2013-10-15 19:20:56      411.5          0.0\n 2013-10-15 19:21:04      410.0          0.0\n \n [216001 rows x 2 columns],\n 5:                      aggregate  dish washer\n time                                       \n 2013-09-26 09:56:08      275.0          0.0\n 2013-09-26 09:56:16      273.0          0.0\n 2013-09-26 09:56:24      273.0          0.0\n 2013-09-26 09:56:32      275.5          0.0\n 2013-09-26 09:56:40      276.0          0.0\n ...                        ...          ...\n 2013-10-16 09:55:36      273.0          0.0\n 2013-10-16 09:55:44      263.0          0.0\n 2013-10-16 09:55:52      263.0          0.0\n 2013-10-16 09:56:00      247.0          0.0\n 2013-10-16 09:56:08      246.0          0.0\n \n [216001 rows x 2 columns]}"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "appliance_data.data"
+   ],
    "metadata": {
     "collapsed": false
    }
