--- a/refit/dishwasher/subsetting_and_making_splits.ipynb
+++ b/refit/dishwasher/subsetting_and_making_splits.ipynb
@@ -69,40 +69,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subetting dataset with 40 days of data for House 1\n",
-      "Subetting dataset with 40 days of data for House 2\n",
-      "Subetting dataset with 40 days of data for House 3\n",
-      "Subetting dataset with 40 days of data for House 5\n",
-      "Subetting dataset with 40 days of data for House 6\n",
-      "Subetting dataset with 40 days of data for House 7\n",
-      "Subetting dataset with 40 days of data for House 9\n",
-      "Subetting dataset with 40 days of data for House 10\n",
-      "Subetting dataset with 40 days of data for House 11\n",
-      "Subetting dataset with 40 days of data for House 13\n",
-      "Subetting dataset with 40 days of data for House 15\n",
-      "Subetting dataset with 40 days of data for House 16\n",
-      "Subetting dataset with 40 days of data for House 18\n",
-      "Subetting dataset with 40 days of data for House 20\n",
-      "Subetting dataset with 40 days of data for House 21\n",
-      "Updating data with selected active appliance activities...\n"
-     ]
-    }
-   ],
-   "source": [
-    "appliance_data.subset_data(no_of_days=40)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Resampling for house number:  1\n",
       "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
       "\n",
@@ -154,6 +120,85 @@
    ],
    "source": [
     "appliance_data.resample('8s')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subetting dataset with 40 days of data for House 1\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 2\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 3\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 5\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 6\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 7\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 9\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 10\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 11\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 13\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 15\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 16\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 18\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 20\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Subetting dataset with 40 days of data for House 21\n",
+      "Consumption Threshold is set to = 80.0\n",
+      "Time Delay Threshold is set to = 45.0 minutes\n",
+      "Estimating active durations of: dish washer\n",
+      "Updating data with selected active appliance activities...\n"
+     ]
+    }
+   ],
+   "source": [
+    "appliance_data.subset_data(no_of_days=40, best_days=True, threshold_x=45.0, threshold_y=80.0, min_limit=5.0, max_limit=260.0)"
    ],
    "metadata": {
     "collapsed": false
