--- a/refit/dishwasher/subsetting_and_making_splits.ipynb
+++ b/refit/dishwasher/subsetting_and_making_splits.ipynb
@@ -70,56 +70,56 @@
      "output_type": "stream",
      "text": [
       "Resampling for house number:  1\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  2\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  3\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  5\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  6\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  7\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  9\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  10\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  11\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  13\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  15\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  16\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  18\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  20\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Resampling for house number:  21\n",
-      "sampling_period = 8s, window_limit = 120 samples, fill_value = 0.0\n",
+      "sampling_period = 8s, window_limit = 45 samples, fill_value = 0.0\n",
       "\n",
       "Updating data with resampled dataset...\n"
      ]
     }
    ],
    "source": [
-    "appliance_data.resample('8s')"
+    "appliance_data.resample(sampling_period=8, window_limit=6)"
    ],
    "metadata": {
     "collapsed": false
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "appliance_data.subset_data(no_of_days=40, best_days=True, threshold_x=45.0, threshold_y=80.0, min_limit=5.0, max_limit=260.0)"
+    "appliance_data.subset_data(no_of_days=40, best_days=True, threshold_x=45.0, threshold_y=80.0, min_limit=5.0, max_limit=240.0)"
    ],
    "metadata": {
     "collapsed": false
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
