extract activations from custom dataset

--- a/refit/dishwasher/get_activations_from_custom_split.ipynb
+++ b/refit/dishwasher/get_activations_from_custom_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "custom_dataset = _EnergyDataset(appliance_splits)"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -192,8 +192,8 @@
     "    filter_activities = custom_dataset.activations[house_number]\n",
     "    activities_lst = []\n",
     "    for row in range(0, len(filter_activities)):\n",
-    "        activities_lst.append(np.array(custom_dataset.data[house_number].loc[str(filter_activities['activity_start'].iloc[row]- pd.Timedelta(seconds=10)):\n",
-    "                                           str(filter_activities['activity_end'].iloc[row]+pd.Timedelta(seconds=10))][custom_dataset.data[house_number].columns[-1]]))\n",
+    "        activities_lst.append(custom_dataset.data[house_number].loc[str(filter_activities['activity_start'].iloc[row]- pd.Timedelta(seconds=10)):\n",
+    "                                           str(filter_activities['activity_end'].iloc[row]+pd.Timedelta(seconds=10))][custom_dataset.data[house_number].columns[-1]])\n",
     "    appliance_activations.update({house_number:activities_lst})"
    ],
    "metadata": {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import pickle\n",
