dishwasher notebooks updated

--- a/refit/dishwasher/subsetting_and_making_splits.ipynb
+++ b/refit/dishwasher/subsetting_and_making_splits.ipynb
@@ -24,32 +24,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching the meter_appliance mapping from REFIT metadata: D:\\Repos\\set_3\\nilm_analyzer\\metadata\\refit\n",
+      "Fetching the meter_appliance mapping from REFIT metadata: C:\\Users\\mahno\\Anaconda\\envs\\torchy\\lib\\site-packages\\nilm_analyzer\\metadata\\refit\n",
       "\n",
       "Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]\n",
       "Dataset successfully loaded!\n",
       "Loading data for appliance DISH WASHER ...\n",
       "Fetching DISH WASHER data for House 1\n",
       "Fetching DISH WASHER data for House 2\n",
-      "Fetching DISH WASHER data for House 3\n",
-      "Appliance 'DISH WASHER' does not exist in house 4.\n",
-      "Fetching DISH WASHER data for House 5\n",
-      "Fetching DISH WASHER data for House 6\n",
-      "Fetching DISH WASHER data for House 7\n",
-      "Appliance 'DISH WASHER' does not exist in house 8.\n",
-      "Fetching DISH WASHER data for House 9\n",
-      "Fetching DISH WASHER data for House 10\n",
-      "Fetching DISH WASHER data for House 11\n",
-      "Appliance 'DISH WASHER' does not exist in house 12.\n",
-      "Fetching DISH WASHER data for House 13\n",
-      "House Number = 14 does not exist in the provided dataset.\n",
-      "Fetching DISH WASHER data for House 15\n",
-      "Fetching DISH WASHER data for House 16\n",
-      "Appliance 'DISH WASHER' does not exist in house 17.\n",
-      "Fetching DISH WASHER data for House 18\n",
-      "Appliance 'DISH WASHER' does not exist in house 19.\n",
-      "Fetching DISH WASHER data for House 20\n",
-      "Fetching DISH WASHER data for House 21\n"
+      "Fetching DISH WASHER data for House 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
