--- a/refit/dishwasher/get_activations_from_custom_split.ipynb
+++ b/refit/dishwasher/get_activations_from_custom_split.ipynb
@@ -192,8 +192,8 @@
     "    filter_activities = custom_dataset.activations[house_number]\n",
     "    activities_lst = []\n",
     "    for row in range(0, len(filter_activities)):\n",
-    "        activities_lst.append(custom_dataset.data[house_number].loc[str(filter_activities['activity_start'].iloc[row]- pd.Timedelta(seconds=10)):\n",
-    "                                           str(filter_activities['activity_end'].iloc[row]+pd.Timedelta(seconds=10))][custom_dataset.data[house_number].columns[-1]])\n",
+    "        activities_lst.append(np.array(custom_dataset.data[house_number].loc[str(filter_activities['activity_start'].iloc[row]- pd.Timedelta(seconds=10)):\n",
+    "                                           str(filter_activities['activity_end'].iloc[row]+pd.Timedelta(seconds=10))][custom_dataset.data[house_number].columns[-1]]))\n",
     "    appliance_activations.update({house_number:activities_lst})"
    ],
    "metadata": {
